Update and rename main.yml to posts-updater.yml

--- a/.github/workflows/posts-updater.yml
+++ b/.github/workflows/posts-updater.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Update posts # (3)
       run: |
-        python3 /home/runner/work/gptblogtest/posts-update-automation.py
+        python3 posts-update-automation.py
 
     - name: Commit and push when there are changes # (4)
       run: |
