--- a/.github/workflows/posts-updater.yml
+++ b/.github/workflows/posts-updater.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         ls -l .
         ls -l ./gptblogtest
-        python3 p./gptblogtest/posts-update-automation.py
+        python3 ./gptblogtest/posts-update-automation.py
 
     - name: Commit and push when there are changes # (4)
       run: |
