--- a/.github/workflows/posts-updater.yml
+++ b/.github/workflows/posts-updater.yml
@@ -6,8 +6,12 @@ on:
   schedule:
     - cron: "0 15 * * *" # (1)
 
+permissions:
+  contents: write 
+
 jobs:
   build:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -17,6 +21,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.12'
+        cache: 'pip'
 
     - name: Install dependencies # (2)
       run: |
@@ -33,6 +38,6 @@ jobs:
         if [ -n "$(git status --porcelain)" ]; then
           git config --local user.email "${{ secrets.EMAIL }}"
           git config --local user.name "An Seo Jin"
-          git commit -m "Update posts via workflow-${{ github.run_number }}"
+          git commit -m "Update posts via workflow-${{ github.run_number }} [skip ci]"
           git push
         fi
